# syssoft-ra-team-bum

./: .gitignore  AUTHORS  CONTRIBUTING.md  ChangeLog  Makefile.am  NEWS  README.md  SOLVED.txt  bootstrap.sh  configure.ac
.reuse/: dep5
.reuse/templates/: syseg-export.jinja2
LICENSES/: LicenseRef-Autoconf-Archive.txt
doc/: conventions.md  references.md  syseg.md
draft/: temp-notes.txt
draft/pitfalls/: eg-06.S  eg-07-beta.c  eg-07-beta.ld  eg-07.c  egx-01.c  egx-02-16bit.S  egx-02-16bit.asm  egx-02-32bit.S  egx-02-32bit.asm  egx-02.ld  egx-04.c  egx-05.c  egx-05.ld  egx-06.c  egx-06.ld  egx-07.c
eg/: Makefile.am  README.m4
eg/abi/: .gitignore  Makefile.am  README.m4  bar.S  build.mk  eg-00.c  eg-01.c  eg-02.c  eg-02_pack.c  eg-03.S  eg-03_c.c  eg-03_crt0.S  eg-03_crt0.c  eg-04.c  eg-04_64.c  eg-05.c  eg-06.c  eg-07-a.c  eg-07-b.c  eg-08.c  eg-09.c  eg-10.S  eg-11.S  eg-12.S  eg-13-bug.S  eg-13.S  eg-14.S  eg-15.S  eg-16.S  eg-16.c  eg-17.c  eg-18.c  eg-18_fastcall.c  eg-20.c  foo.S
eg/bl/: README.m4  bios1.S  bios1.h  bios2.S  bios2.h  boot.ld  boot2.ld  bootloader.c  bounce.c  bounce.h  build.mk  kernel.c  kernel.h  kernel2.c  rt0.S
eg/crt/: .gitignore  README.m4  build.mk  eg-00.hex  eg-01.S  eg-02.S  eg-03.S  eg-04.S  eg-05.S  eg-06.S  eg-07.S  eg-08-crt0.S  eg-08.S  eg-08.ld  eg-09-crt0.S  eg-09.S  eg-09.ld  eg-10.c  eg-10.ld  eg-11.c  eg-11.ld  eg-12-lib.c  eg-12-lib.h  eg-12.c  eg-12.ld  eg-13-lib.c  eg-13-lib.h  eg-13.c  eg-13.ld  hello.S  stdio.h
eg/fat/: .gitignore  README.m4  build.mk  egx-01.hex  egx-01.hex.license  fat.h  fat12.h  fatinfo.c  hw.ld  mbs.S  mkfat12-beta.c  mkfat12.c  vbrinfo.c
eg/foo/: Makefile.am  README.m4  build.mk  main.c
eg/hw/: .gitignore  README.m4  TODO  build.mk  e4-01.c  e5.c  e6-lib-fix.S  e6-lib.S  e6.c  e6.ld  e7.c  e7.ld  e7stdio.h  e8.ld  e9.c  e9.ld  eg-00-r1.hex  eg-00-r2.hex  eg-00-r2.hex.license  eg-01-r1.asm  eg-01-r2.asm  eg-01.asm  eg-02-alpha.asm  eg-02-beta-r1.asm  eg-02-beta.asm  eg-02.asm  eg-03-beta.S  eg-03-beta2.S  eg-03-beta3.S  eg-03-beta4.S  eg-03.S  eg-04-alpha.1.c  eg-04-alpha.2.c  eg-04-alpha.c  eg-04-beta+bug.c  eg-04-beta.1.c  eg-04-beta.c  eg-04.c  eg-04.h  eg-04.ld  (+29 more)
eg/make/: Makefile-00  Makefile-01  Makefile-02  Makefile-03  Makefile-04  Makefile-05  Makefile-06  Makefile-07  Makefile-08  Makefile-09  Makefile.am  README.m4  circle.c  circle.h  main.c  rectangle.c  rectangle.h  square.c  square.h
eg/posix/: .gitignore  README.m4  TODO  build.mk  ctermid.c  exec-01.c  exec.c  file.c  fork-01.c  fork-02.c  fork.c  getpid.c  hello.c  kill.c  loop.c  open.c  pgid.c  pipe.c  pipeline.c  redir.c  shell-job.c  shell-loop.c  shell-pipe.c  shell-redir.c  sigaction-handler.c  sigaction.c  tcpgrp.c  wait.c
eg/real/: README.m4  build.mk  eg-00.S  eg-01.S  eg-01_alpha.S  eg-01v2.S  eg-02-rene.S  eg-02-v2.S  eg-02.S  eg-03.c  eg-03.h  eg-03_utils.c  eg.c  egx-01.S  egx-02.S  mbr.ld  rt0.S  rt0.ld
eg/rop/: .gitignore  README.m4  build.mk  eg-00.c  eg-00a.c  eg-01.c  eg-02.c  eg-03.c  eg-04.c  eg-04a.c  eg-05.c  eg-06.c  eg-07.c  eg-08.c  eg-09.S  eg-09.c  eg-09.sh
eg/run/: .gitignore  Makefile.am  README.m4  TODO  build.mk  eg-01.c  eg-02.c  eg-02a.c  eg-02b.c
eg/tydos/: .gitignore  Makefile.am  README.m4  bios1.S  bios1.h  bios2.S  bios2.h  bootloader.c  build.mk  kaux.c  kaux.h  kernel.c  kernel.h  libtydos.c  logo.c  prog.c  prog.ld  rt0.S  syscall.c  tydos.h  tydos.ld
eg/tyfs/: .gitignore  Makefile.am  README.m4  build.mk  debug.h  tyfsedit.c
eg/tyos/: Makefile.am  README.m4  boot.ld  bootloader.c  build.mk  kernel.c  rt0.S  runtime.c  runtime.h  syscall.c  syscall.h  utils.c
eg/tyos32/: .gitignore  README.m4  boot.ld  bootloader.c  build.mk  init32.S  kernel-old.c  kernel.c  utils.h
extra/: Makefile.am  README.m4
extra/autotools/: README.m4
extra/autotools/eg-00/: main1.c  main2.c
extra/autotools/eg-01/: foo.c  foobar.h
extra/autotools/ex/: Makefile.am  bar.c  configure.ac  main.c
extra/make/: README.m4  bar1.c  bar2.c  foo1.c  foo2.c  foobar.h  main.c
m4/: ax_gcc_func_attribute.m4  ax_test_compiler_flag.m4
replace/: Makefile.am  README.m4
test/: Makefile.am  README.m4  stripcomment.am
test/stripcomment-test/: file.m4  file.m4.stripped  makefile  makefile.stripped  prog.c  prog.c.stripped
tools/: Makefile.am  Makegyver.mk  bin2hex.c  bintools.m4  clean-extra-subdirs.am  cpimg.c  debug.h  docm4.am  docm4.m4  example.mk  hex2bin.c  install-reuse  main.c  main.sh  newfile  readme.mk  syseg-export  syseg-newfile  syseg-project  syseg-reuse  syseg.c  syseg.h
try/: Makefile.am  README.m4
try/bcmd/: Makefile.m4  README.m4  bcmd.ld  bios.S  bios.h  main.c  opt.S  rt0.S  utils.c  utils.h
try/hack01/: Makefile.m4  README.m4  check.sh
try/hello/: SOLVED.txt  build.mk  libc.S  main.c
try/hw/: Makefile.m4  README.m4
try/imf/: Makefile.m4  README.m4  decode  secret.cry
try/mydos/: Makefile.m4  README.m4  bios1.S  bios1.h  bios2.S  bios2.h  bootloader.c  debug.h  kaux.c  kaux.h  kernel.c  kernel.h  libtydos.c  logo.c  prog.c  prog.ld  rt0.S  syscall.c  tydos.h  tydos.ld
try/quiz/: README.m4
try/tyos/: Makefile.m4  README.m4  boot.ld  rt0.S  stage1.c  stage2.c  utils.c  utils.h
