#    SPDX-FileCopyrightText: 2001 Monaco F. J <monaco@usp.br>
#
#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of SYSeg, available at https://gitlab.com/monaco/syseg.

##
## Configuration
##

# Name the subdirs in this section.

SUBDIRS = abi bl build crt fat foo hw make posix real rop run tydos tyfs tyos tyos32

include $(TOOL_DIR)/readme.mk

CLEANFILES = README
