#    SPDX-FileCopyrightText: 2001 Monaco F. J. <monaco@usp.br>
#   
#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of SYSeg, available at https://gitlab.com/monaco/syseg.

##
## Configuration
##

# Name the subdirs in this section.

extra_subdirs = 

# List of files that should be created from the source m4 files.

docm4_files = README make/README autotools/README


##
## No need to change this
##

# REUSE-IgnoreStart
include $(top_srcdir)/tools/docm4.am
# REUSE-IgnoreEnd 

EXTRA_DIST += $(extra_subdirs)






# Hint: ./make/Makefile cannot be processed by dist-hook.
#       The directory is not being cleaned by local-clean.

