#    SPDX-FileCopyrightText: 2021 Monaco F. J. <monaco@usp.br>
#   
#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of SYSeg, available at https://gitlab.com/monaco/syseg.


##
## Configuration
##

# List of files that should be created from the source m4 files.

docm4_files = README 

include $(top_srcdir)/tools/docm4.am

# clean-local:
# 	rm -f $(docm4_files)

# dist-hook: clean-local
