#    SPDX-FileCopyrightText: 2001 Monaco F. J <monaco@usp.br>
#
#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of SYSeg, available at https://gitlab.com/monaco/syseg.

##
## Configuration
##

# Name the subdirs in this section.

SUBDIRS = hello

include $(TOOL_DIR)/readme.mk

CLEANFILES = README 


