#    SPDX-FileCopyrightText: 2021 Monaco F. J. <monaco@usp.br>
#   
#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of SYSeg, available at https://gitlab.com/monaco/syseg.


bin_PROGRAMS = hello

hello_SOURCES = main.c foo.c bar.c foobar.h replace.h

hello_LDADD = $(LIBOBJS)
